firewall
# Generated by iptables-save v1.8.4 on Tue Dec 26 16:07:47 2023
*raw
:PREROUTING ACCEPT [507:33767]
:OUTPUT ACCEPT [420:48671]
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG RST,ACK -j DROP
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG RST -j DROP
COMMIT
# Completed on Tue Dec 26 16:07:47 2023
# Generated by iptables-save v1.8.4 on Tue Dec 26 16:07:47 2023
*filter
:INPUT ACCEPT [766:167837]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5313:710180]
-A INPUT -p tcp -m set --match-set authenticated src -m tcp --dport 666 -j ACCEPT
-A INPUT -s 89.38.97.199/32 -p tcp -m tcp --dport 666 -j ACCEPT
-A INPUT -s 207.44.113.172/32 -p tcp -m tcp --dport 666 -j ACCEPT
-A INPUT -s 141.193.68.135/32 -p tcp -m tcp --dport 666 -j ACCEPT
-A INPUT -s 104.152.143.61/32 -p tcp -m tcp --dport 666 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 666 -j DROP
COMMIT
# Completed on Tue Dec 26 16:07:47 2023
